// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetLabelingLabel should render properly with a label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-0:hover {
  background-color: #0074f538;
}

.emotion-0:hover svg {
  opacity: 1;
}

.emotion-1 {
  height: 56px;
  width: 56px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-3 {
  color: #b3b3b3;
}

.emotion-4 {
  font-weight: 500;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  font-weight: 500;
  text-transform: capitalize;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  margin-top: -4px;
}

.emotion-8:hover,
.emotion-8.focus-visible:focus,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-8:hover svg,
.emotion-8.focus-visible:focus svg,
.emotion-8 .noop svg {
  opacity: 1;
}

.emotion-8[aria-disabled=true],
.emotion-8 .noop {
  color: #808080;
}

.emotion-9 {
  opacity: 0;
}

<div
  className="emotion-0"
>
  <img
    alt={
      Array [
        0.45,
        0.27,
        0.534,
        0.395,
      ]
    }
    className="emotion-1"
    src="data:image/png;base64..."
    title={
      Array [
        0.45,
        0.27,
        0.534,
        0.395,
      ]
    }
  />
  <div
    className="emotion-2"
  >
    <div>
      <div
        className="emotion-3"
      >
        Label:
      </div>
      <div
        className="emotion-4"
      >
        cat
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div>
        <div
          className="emotion-3"
        >
          Scope:
        </div>
        <div
          className="emotion-7"
        >
          train
        </div>
      </div>
      <button
        aria-label="Remove Label"
        className="emotion-8"
        onClick={[Function]}
        title="Remove Label"
        type="button"
      >
        <svg
          className="emotion-9"
          data-file-name="trash.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`AssetLabelingLabel should render properly with no label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-1 {
  height: 56px;
  width: 56px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-2 {
  color: #b3b3b3;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  width: 100%;
  padding: 10px 8px;
  outline: 1px solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  line-height: 20px;
  font-weight: 500;
  border: 1px solid #c92300;
  border-radius: 2px;
  border-width: 2px;
  margin-bottom: 1px;
}

.emotion-4:hover {
  border: 2px solid #ffffff;
}

.emotion-4:focus {
  background-color: #ffffff;
  color: #000000;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  padding-right: 16px;
  float: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-7 {
  padding-right: 24px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  padding-top: 1px;
}

.emotion-10 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #ffffff;
}

.emotion-11 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: #3A5DFF;
}

.emotion-12 {
  padding-left: 12px;
}

.emotion-13 {
  font-weight: 400;
  color: #ffffff;
}

.emotion-14 {
  color: #b3b3b3;
}

.emotion-18 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #808080;
}

.emotion-19 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: none;
}

<div
  className="emotion-0"
>
  <img
    alt={
      Array [
        0.53,
        0.113,
        0.639,
        0.29,
      ]
    }
    className="emotion-1"
    src="data:image/png;base64..."
    title={
      Array [
        0.53,
        0.113,
        0.639,
        0.29,
      ]
    }
  />
  <div>
    <label
      className="emotion-2"
    >
      Label:
      <div
        className="emotion-3"
        data-reach-combobox=""
        data-state="idle"
      >
        <input
          aria-autocomplete="both"
          aria-controls="listbox--1"
          aria-expanded={false}
          aria-haspopup="listbox"
          autoComplete="off"
          className="emotion-4"
          data-reach-combobox-input=""
          data-state="idle"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          value=""
        />
        <span />
      </div>
      
    </label>
    <fieldset
      className="emotion-5"
    >
      <legend
        className="emotion-6"
      >
        Select Scope:
      </legend>
      <div
        className="emotion-7"
      >
        <div>
          <label
            className="emotion-8"
          >
            <div
              className="emotion-9"
            >
              <input
                className="emotion-10"
                defaultChecked={true}
                name="Select Scope"
                onClick={[Function]}
                type="radio"
                value="TRAIN"
              />
              <div
                className="emotion-11"
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-13"
              >
                Train
              </div>
              <div
                className="emotion-14"
              >
                
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        className="emotion-7"
      >
        <div>
          <label
            className="emotion-8"
          >
            <div
              className="emotion-9"
            >
              <input
                className="emotion-18"
                defaultChecked={false}
                name="Select Scope"
                onClick={[Function]}
                type="radio"
                value="TEST"
              />
              <div
                className="emotion-19"
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-13"
              >
                Test
              </div>
              <div
                className="emotion-14"
              >
                
              </div>
            </div>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
